syntax = "proto3";

package payment.events;
option java_multiple_files = true;

message PaymentEvent {
  string id = 1;
  string patientId = 2;
  string state = 3;
  double amount = 4;
  string createdDate = 5;
}