syntax = "proto3";

package notification.events;
option java_multiple_files = true;

message NotificationEvent {
  repeated string userIds = 1;
  string title = 2;
  string eventType=3;
  string message = 4;
}